<resources>
    <string name="app_name">Sport Logger</string>
    <string name="menu_slot_1">Preferences for Location Requests</string>
    <string name="menu_slot_2">Start logging service</string>
    <string name="menu_slot_3">Stop logging service</string>
    <string name="menu_slot_4">Report Locations</string>
    <string name="menu_slot_5">Delete all locations from the DB</string>
    <string name="title_activity_maps">Sport Logger</string>
    <string name="menu_slot_6">Close streetView</string>
    <string name="_1_minute">1 minute</string>
    <string name="_5_minutes">5 minutes</string>
    <string name="_10_minutes">10 minutes</string>
    <string name="_15_minutes">15 minutes</string>
    <string name="_50_m">50 m</string>
    <string name="_100_m">100 m</string>
    <string name="_500_m">500 m</string>
    <string name="_1_km">1 km</string>
    <string name="_1_minute_ms">60000</string>
    <string name="_5_minutes_ms">300000</string>
    <string name="_10_minutes_ms">600000</string>
    <string name="_15_minutes_ms">900000</string>
    <string name="_50">50</string>
    <string name="_100">100</string>
    <string name="_500">500</string>
    <string name="_1000">1000</string>
    <string name="loading">LOADING...</string>
    <string name="interval_time_between_updates">Interval time between updates</string>
    <string name="displacement_between_updates">Displacement between updates</string>
    <string name="apply_changes">Apply changes</string>
    <string name="toast_alrady_connected">already connected</string>
    <string name="toast_errpr_during_disconnection">error during disconnection</string>
    <string name="toast_disconnected">disconnected</string>
    <string name="message_sure_to_delete">Are you sure you want to delete all markers ?</string>
    <string name="toast_db_cleared">DB cleared</string>
    <string name="toast_location_null">location NULL</string>
    <string name="toast_new_marker_placed">new marker placed</string>
    <string name="toast_connected">connected</string>
    <string name="toast_permission_error">permission error</string>
    <string name="toast_connection_suspended">Connection Suspended:</string>
    <string name="toast_connection_failed">Connection failed:</string>
    <string name="toast_reconnectiong_for_changes">reconnecting to apply changes</string>
    <string name="toast_no_changes">Nothing to change</string>
    <string name="toast_changes">preferences changed</string>
    <string name="delete_db">Delete DB</string>
    <string name="entries_per_day">Entries for this day:</string>
</resources>
