<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teocri.sportlogger.PreferencesRequestActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorBackground"
        android:isScrollContainer="true"
        android:paddingBottom="30sp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interval_time_between_updates"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:paddingTop="5sp"/>

        <RadioGroup
            android:id="@+id/radioTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_minute"
                android:hint="@string/_1_minute_ms"
                android:textColor="@color/colorTextWhite"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_5_minutes"
                android:hint="@string/_5_minutes_ms"
                android:textColor="@color/colorTextWhite"/>

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_minutes"
                android:hint="@string/_10_minutes_ms"
                android:textColor="@color/colorTextWhite"/>

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_15_minutes"
                android:hint="@string/_15_minutes_ms"
                android:textColor="@color/colorTextWhite"/>
        </RadioGroup>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/displacement_between_updates"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:paddingTop="20sp"/>

        <RadioGroup
            android:id="@+id/radioGap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5sp"
            android:paddingBottom="20sp">

            <RadioButton
                android:id="@+id/radioButton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/_50_m"
                android:hint="@string/_50"
                android:textColor="@color/colorTextWhite"/>

            <RadioButton
                android:id="@+id/radioButton6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_100_m"
                android:hint="@string/_100"
                android:textColor="@color/colorTextWhite"/>

            <RadioButton
                android:id="@+id/radioButton7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_500_m"
                android:hint="@string/_500"
                android:textColor="@color/colorTextWhite"/>

            <RadioButton
                android:id="@+id/radioButton8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_1_km"
                android:hint="@string/_1000"
                android:textColor="@color/colorTextWhite"/>
        </RadioGroup>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply_changes"
            android:onClick="SetChanges"
            android:textSize="15sp" />
    </LinearLayout>
    </ScrollView>
</RelativeLayout>
